--- a/scss/layouts/_menu-section.scss
+++ b/scss/layouts/_menu-section.scss
@@ -72,21 +72,48 @@
         justify-content: space-between;
         align-items: flex-end;
         padding: 14px;
+        gap: 10px;
         margin: auto 13px;
         width: 85%;
+        padding-right: 10px;
 
-        h3 {
-            margin: 5px;
-            font-size: 18px;
-        }
+        &--info {
+            width: calc(100% - 40px);
+            box-sizing: border-box;
+            transition: all 0.2s ease-in-out;
 
-        p {
-            margin: 5px;
-            font-size: 15px;
-            text-overflow: elipsis;
+            h3 {
+                display: block;
+                margin-top: 5px;
+                margin-bottom: 5px;
+                font-size: 18px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                box-sizing: border-box;
+                width: 100%;
+                transition: all 0.2s ease-in-out;
+            }
+    
+            p {
+                display: block;
+                margin-top: 5px;
+                margin-bottom: 5px;
+                margin-left: 0;
+                margin-right: 0;
+                padding-right: 0;
+                font-size: 15px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                box-sizing: border-box;
+                width: 100%;
+                transition: all 0.2s ease-in-out;
+            }
         }
 
         &--price {
+            display: block;
             font-weight: 700;
             transform: translateX(0);
             transition: transform 0.2s ease-in-out;
@@ -131,6 +158,17 @@
 
             .menu-section__card--price {
                 transform: translateX(-59px);
+            }
+
+            .menu-section__card--info {
+                width: calc(100% - 61px);
+                h3 {
+
+                }
+
+                p {
+                    padding-right: 33px;
+                }
             }
         }
 
